Prototype for Sky to look at. ALMOST WORKING

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
 			</h2>
 			<div id="filter">
 				<input type="checkbox" name="select-all" />
-				<span class="ticket-name table-element">Name</span>
+				<span class="ticket-name table-element">Ticket Number</span>
 				<span class="ticket-date table-element">Date</span>
 				<span class="ticket-type table-element">Type</span>
 				<select class="table-element" name="views">
@@ -36,7 +36,7 @@
 						<td>
 							<input type="checkbox" name="selcet-all" />
 						</td>
-						<td class="ticket-name table-element">Name</td>
+						<td class="ticket-name table-element">Ticket Number</td>
 						<td class="ticket-date table-element">Date</td>
 						<td class="ticket-type table-element">Type</td>
 						<td class="ticket-priority table-element">Priority</td>
@@ -46,7 +46,7 @@
 						<td>
 							<input type="checkbox" name="selcet-all" />
 						</td>
-						<td class="table-element ticket-name">Name</td>
+						<td class="table-element ticket-name">Ticket Number</td>
 						<td class="table-element ticket-date">Date</td>
 						<td class="table-element ticket-type">Type</td>
 						<td class="table-element ticket-priority">Priority</td>
